development script improvements